# HarmonyEngine

./: AUDIT_MELODY_CHORDS_RESEARCH.md  CLAUDE.md  DEVLOG.md  INDEX.md  ONBOARDING.md  README.md  build.js  package-lock.json  package.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  pages.yml
archive/: CLAUDE_md_cowork_era_2026-04-17.md
rust/: Cargo.toml
rust/src/: audio.rs  chord_track.rs  conductor.rs  config.rs  diagnostic.rs  groove.rs  harmony.rs  lib.rs  main.rs  melody.rs  narrative.rs  pad_track.rs  palette.rs  plan.rs  rng.rs  sequencer.rs  synth.rs  tension.rs  voice_event.rs  voice_pool.rs  voice_ring.rs  voicing_engine.rs  wavetables.rs  workers.rs
rust/src-ui/: app.rs  bridge.rs  main.rs  presets.rs  shortcuts.rs  theme.rs
rust/src-ui/tabs/: engineer.rs  mod.rs  simple.rs  visualizer.rs
rust/src-ui/widgets/: knob.rs  meter.rs  mod.rs  phase_indicator.rs
rust/tests/: flush_latency.rs  golden_all_palettes.rs  golden_phase2b.rs  golden_phase2b1.rs  voicing_rules.rs
scripts/: dev-server.js
specs/: SPEC_008_CYCLE_MODE.md  SPEC_010_STAGGERED_PHASE_TRANSITIONS.md  SPEC_011_TENSION_CURVE_RANDOMIZATION.md  SPEC_012_POST_MAELSTROM_DECAY_ARC.md  SPEC_014_UI_OVERHAUL.md  SPEC_028_PALETTE_STORM_PERSONALITY.md  SPEC_032_PER_PALETTE_VOICE_OVERHAUL.md  SPEC_036_MELODY_EVOLUTION.md  SPEC_039_MELODY_RHYTHM_PALETTE_FIX.md  SPEC_040_CHORD_EVOLUTION.md  SPEC_042_AUDIO_DIAGNOSTIC_SYSTEM.md  SPEC_057_RUST_MIGRATION.md  SPEC_062_UI_OVERHAUL.md  SPEC_071_RUST_PALETTE_TIMBRE_FIXES.md
src/: 03_audio.js  03a_harmony.js  03b_sequencer.js  03c_bullet_voice.js  03d_state_mapper.js  03e_wavetables.js  03f_melody.js  03g_narrative.js  audio.js  conductor.js  config.js  diagnostic.js  groove.js  harmony.js  melody.js  narrative.js  sequencer.js  shell.html  state.js  state_mapper.js  voice_pool.js  wavetables.js
templates/: SPEC_TEMPLATE.md
