[package]
name = "harmonyengine"
version = "0.1.0"
edition = "2021"
description = "HarmonyEngine — procedural music generator (Rust Phase 1 parity port, SPEC_057)"

[[bin]]
name = "harmonyengine"
path = "src/main.rs"

[lib]
name = "harmonyengine"
path = "src/lib.rs"

[dependencies]
# cpal drives the audio callback. Phase 2a-1 (#68) layers the Shape B
# threading stack from SPEC_057 §3 on top: SPSC ring buffers for per-voice
# event streams, crossbeam channels for beat signalling, arc-swap for the
# RT-safe Plan publisher (equivalent RT-safety guarantees to basedrop with
# a simpler API — a fixed-size Collector for basedrop can swap in if we
# hit audio-thread allocation in 2b), parking_lot for worker-barrier
# primitives.
cpal = "0.15"
ringbuf = "0.4"
crossbeam-channel = "0.5"
arc-swap = "1.7"
parking_lot = "0.12"

[dev-dependencies]
# Enabled alongside the audio-thread RT discipline work in Phase 2a-1.
assert_no_alloc = "1.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
